4th push, SetReminder, ViewReminder and DeleteReminder

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,20 @@
     <servlet>
         <description>
         </description>
+        <display-name>ReminderServlet</display-name>
+        <servlet-name>ReminderServlet</servlet-name>
+        <servlet-class>com.aaupush.server.ReminderServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ReminderServlet</servlet-name>
+        <url-pattern>/ReminderServlet</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+
+    <servlet>
+        <description>
+        </description>
         <display-name>ForumServlet</display-name>
         <servlet-name>ForumServlet</servlet-name>
         <servlet-class>com.aaupush.server.ForumServlet</servlet-class>
