--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,20 @@
     <servlet>
         <description>
         </description>
+        <display-name>ActionServlet</display-name>
+        <servlet-name>ActionServlet</servlet-name>
+        <servlet-class>com.aaupush.server.ActionServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ActionServlet</servlet-name>
+        <url-pattern>/ActionServlet</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+
+    <servlet>
+        <description>
+        </description>
         <display-name>ReminderServlet</display-name>
         <servlet-name>ReminderServlet</servlet-name>
         <servlet-class>com.aaupush.server.ReminderServlet</servlet-class>
